# fastapi-template

./: .env  .env.dev  .env.local  .gitignore  README.md  pyproject.toml
scripts/: run_dev.py  run_local.py
src/fastapi_ai/: main.py
src/fastapi_ai/api/v1/: __init__.py  samples.py
src/fastapi_ai/api/v1/sample/: router.py  routers.py  schemas.py
src/fastapi_ai/core/config/: database.py  settings.py
src/fastapi_ai/core/constants/: sample_enum.py
src/fastapi_ai/core/exception/: global_exception_handler.py
src/fastapi_ai/core/schemas/: error_response.py
src/fastapi_template/: main.py
src/fastapi_template/api/ai/endpoint/: ai_endpoint.py
src/fastapi_template/api/ai/service/: ai_service.py
src/fastapi_template/api/sample/endpoint/: sample_endpoint.py
src/fastapi_template/api/sample/model/: sample_model.py  sample_response.py
src/fastapi_template/api/v1/: __init__.py  samples.py  sst_whisper.py  users.py
src/fastapi_template/core/config/: config.py  database.py  lifespan.py  settings.py  swagger_config.py
src/fastapi_template/core/exception/: exception_handler.py  global_exception_handler.py
src/fastapi_template/core/exception/model/: error_model.py
src/fastapi_template/core/middleware/: request_id_middleware.py  response_wrapper.py
src/fastapi_template/core/model/: common_response.py
src/fastapi_template/core/util/: id_generator.py
src/fastapi_template/domains/sample/: models.py
src/fastapi_template/domains/user/: dependencies.py  models.py  repository.py  schemas.py  service.py
src/fastapi_template/infra/llm/: llm_client.py
src/fastapi_template/infra/llm/model/: llm_model.py
src/fastapi_template/sample/endpoint/: sample_endpoint.py
src/fastapi_template/sample/model/: sample_request.py  sample_response.py
