[project]
name = "fastapi-ai"
version = "0.1.0"
description = ""
authors = [
    { name = "김정현", email = "dev.kjung@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "mysql (>=0.0.3,<0.0.4)",
    "sqlmodel (>=0.0.24,<0.0.25)"
]

[tool.poetry]
packages = [{ include = "fastapi_ai", from = "src" }]


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.3"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
